[Happy boyscout] Sonar improvments #2